--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "NumberGuessingGame",
     "slug": "NumberGuessingGame",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "deafult",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
